:recycle: refactor: 쿠폰 타입 설정,예외 처리