@@ -7,18 +7,16 @@ import com.sparta.oishitable.domain.customer.coupon.entity.UserCoupon;
 import com.sparta.oishitable.domain.customer.coupon.repository.UserCouponRepository;
 import com.sparta.oishitable.domain.owner.coupon.dto.request.CouponResponse;
 import com.sparta.oishitable.domain.owner.coupon.entity.Coupon;
+import com.sparta.oishitable.domain.owner.coupon.entity.CouponType;
 import com.sparta.oishitable.domain.owner.coupon.repository.CouponRepository;
 import com.sparta.oishitable.global.exception.CustomRuntimeException;
 import com.sparta.oishitable.global.exception.NotFoundException;
 import com.sparta.oishitable.global.exception.error.ErrorCode;
 import lombok.RequiredArgsConstructor;
-import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -34,11 +32,10 @@ public class UserCouponService {
 
         return coupons.stream()
                 .map(CouponResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
-    @CacheEvict(value = "userCoupons", key = "#userId + '0' + '10'")
     public void downloadCoupon(Long userId, Long couponId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND));
@@ -58,11 +55,11 @@ public class UserCouponService {
                 .coupon(coupon)
                 .build();
 
-        if (coupon.getSpecialCouponMaxCount() != 0) {
+        if (coupon.getType() == CouponType.FIRST_COME) {
             long downloadedCount = userCouponRepository.countByCouponId(couponId);
 
             // 다운로드 한도 초과 여부 체크
-            if (downloadedCount >= coupon.getSpecialCouponMaxCount()) {
+            if (downloadedCount >= coupon.getFirstComeCouponMaxCount()) {
                 throw new CustomRuntimeException(ErrorCode.COUPON_LIMIT_EXCEEDED);
             }
         }
@@ -71,18 +68,16 @@ public class UserCouponService {
 
     }
 
-    @Cacheable(value = "userCoupons", key = "#userId + #cursor + #size")
     public List<UserCouponResponse> findUserCoupons(Long userId, Long cursor, int size) {
 
         List<UserCoupon> userCoupons = userCouponRepository.findByUserIdAndCouponUsedFalseAndIdGreaterThan(userId, cursor, size);
 
         return userCoupons.stream()
                 .map(UserCouponResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
-    @CacheEvict(value = "userCoupons", key = "#userId + '0' + '10'")
     public void useCoupon(Long userId, Long couponId) {
         UserCoupon userCoupon = userCouponRepository.findByUserIdAndCouponId(userId, couponId)
                 .orElseThrow(() -> new NotFoundException(ErrorCode.COUPON_NOT_FOUND));
